@@ -1,8 +1,11 @@
 // Total.js framework
 // The MIT License
-// Copyright 2012-2025 (c) Peter Širka <petersirka@gmail.com>
+// Copyright 2012-2026 (c) Peter Širka <petersirka@gmail.com>
 
 'use strict';
+
+// Overwrites the current directory
+process.chdir(process.mainModule.path);
 
 const NODE_MODULES = { buffer: 1, child_process: 1, process: 1, fs: 1, events: 1, http: 1, https: 1, http2: 1, util: 1, net: 1, os: 1, path: 1, punycode: 1, readline: 1, repl: 1, stream: 1, string_decoder: 1, tls: 1, trace_events: 1, tty: 1, dgram: 1, url: 1, v8: 1, vm: 1, wasi: 1, worker_threads: 1, zlib: 1, crypto: 1, dns: 1 };
 const EMPTYOBJECT = {};
