@@ -22,6 +22,7 @@
 - added a new method `U.aistreamer(on_line, on_message)`
 - added `Flow.edit(proxy_socket_url)` method for the remote editing of the FlowStream
 - added a new global methods `AIMODEL()` and `NEWAIMODEL()`
+- added `exec` command to the remote editing functionality
 
 ========================
 0.0.15
